[build-system]
requires = [
    "flit_core >=3,<4"
]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "statelit"
home-page = "https://github.com/dwreeves/statelit"
license = "MIT"
author = "Daniel Reeves"
author-email = "xdanielreeves@gmail.com"
description-file = "README.md"
classifiers = [
    "Framework :: Apache Airflow",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]
requires = [
    "streamlit",
    "pydantic<2"
]
requires-python = ">=3.7"

[tool.flit.metadata.requires-extra]
test = [
    "pre-commit",
    "pytest",
    "pytest-cov",
    "isort",
    "flake8",
    "flakeheaven>3",

    # Supported third party libraries
    "pandas"
]
doc = [
    "mkdocs",
    "pymdown-extensions",
    "mkdocs-material",
    "mkdocs-macros-plugin",
    "pygments",
    "markdown-include"
]


[tool.isort]
src_paths = [
    "statelit"
]
lines_after_imports = 2
force_single_line = true
line_length = 120

[tool.pytest.ini_options]
addopts = "-v --cov=statelit"
testpaths = [
    "tests"
]

[tool.flakeheaven]
exclude = [
    "venv/",
    ".git/",
    "dist/",
    ".pytest_cache/"
]
max_line_length = 120

[tool.flakeheaven.plugins]
pycodestyle = ["+*", "-W503"]
